# tech-tests

./: .dockerignore  .gitignore  Makefile  README.md  bundle.sh  docker-compose.yaml  pyproject.toml  requirements.txt
data/: phytoplankton-results-august-2005-to-august-2012.csv
frontend/: .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  instructions.md
frontend/backend/app/app/db/: init_db.py
frontend/frontend/src/: App.js
phyto/: database.py  loader.py
