[tool.poetry]
name = "fs-tech-test"
version = "0.1.0"
description = ""
authors = ["Alex Woodham <alex@netpurpose.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.4"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
